[metadata]
name = ginpipe
version = 0.0.3
author = Leonardo Pepino
author_email = leonardodpepino@gmail.com
description = ML Pipelines using Gin
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    gin-config==0.5.0
    loguru>=0.6.0
    joblib>=1.2.0
    diff_match_patch
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ginpipe = ginpipe.run:main
